sql/field.h
@@ -5363,6 +5363,7 @@ bool check_expression(Virtual_column_info *vcol, LEX_CSTRING *name,
 #define FIELDFLAG_GEOM			2048U   // mangled with decimals!
 
 #define FIELDFLAG_TREAT_BIT_AS_CHAR     4096U   /* use Field_bit_as_char */
+#define FIELDFLAG_FRM_HEX_ENCODED_TYPELIB 4096U // mangled with *_BIT_AS_CHAR
 #define FIELDFLAG_LONG_DECIMAL          8192U
 #define FIELDFLAG_NO_DEFAULT		16384U  /* sql */
 #define FIELDFLAG_MAYBE_NULL		32768U	// sql
